--- a/Task 1 - Linear regression.ipynb
+++ b/Task 1 - Linear regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 924,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 925,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 926,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 927,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4     6183.95     5986.26      197.69          0.0  conventional  2015  Albany  "
       ]
      },
-     "execution_count": 927,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 928,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "(18249, 13)"
       ]
      },
-     "execution_count": 928,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 929,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 930,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 931,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,16 +304,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 932,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\Anaconda3\\lib\\site-packages\\pandas\\plotting\\_converter.py:129: FutureWarning: Using an implicitly registered datetime converter for a matplotlib plotting method. The converter was registered by pandas on import. Future versions of pandas will require you to explicitly register matplotlib converters.\n",
+      "\n",
+      "To register the converters:\n",
+      "\t>>> from pandas.plotting import register_matplotlib_converters\n",
+      "\t>>> register_matplotlib_converters()\n",
+      "  warnings.warn(msg, FutureWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Text(0.5, 1.0, 'Date vs Total volume')"
       ]
      },
-     "execution_count": 932,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -338,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 933,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +359,7 @@
        "Text(0.5, 1.0, 'Date vs 4046')"
       ]
      },
-     "execution_count": 933,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -372,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 934,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +393,7 @@
        "Text(0.5, 1.0, 'Date vs 4225')"
       ]
      },
-     "execution_count": 934,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -406,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 935,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +427,7 @@
        "Text(0.5, 1.0, 'Date vs 4770')"
       ]
      },
-     "execution_count": 935,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -440,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 936,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +461,7 @@
        "Text(0.5, 1.0, 'Date vs Total Bags')"
       ]
      },
-     "execution_count": 936,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -477,12 +489,12 @@
    "metadata": {},
    "source": [
     "According to previous plots it can be concluded that there exist seosanality patterns in variables \"Total volume\", \"4046\", \"4225\", \"4770\" and \"Total Bags\", at least for large values of these variables. So, the data about the date of each observation is included into these variables. Hence to avoid multicollinearity the date will not be included into the model. <br>\n",
-    "Also, further inspection of \"Total Volume\" and \"Total Bags variables\" reveals that these variables are highly correlated as well"
+    "Also, further inspection of \"Total Volume\" and \"Total Bags\" variables reveals that these variables are highly correlated as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 937,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +503,7 @@
        "Text(0, 0.5, 'Total Bags')"
       ]
      },
-     "execution_count": 937,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -517,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 938,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +539,7 @@
        "       [0.95317924, 1.        ]])"
       ]
      },
-     "execution_count": 938,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 939,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +568,7 @@
        "Text(0.5, 1.0, 'Average Price')"
       ]
      },
-     "execution_count": 939,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -585,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 940,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +618,7 @@
        "Text(0.5, 0.98, 'log(Average Price) vs')"
       ]
      },
-     "execution_count": 940,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -647,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 941,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 942,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +695,7 @@
        "Text(0.5, 0.98, 'log(Average Price) vs')"
       ]
      },
-     "execution_count": 942,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -731,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 943,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +752,7 @@
        "Text(0, 0.5, 'Average price')"
       ]
      },
-     "execution_count": 943,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -791,13 +803,14 @@
     "* $\\mathbf{x_{3}}$ - 4225 <br>\n",
     "* $\\mathbf{x_{2}}$ - 4770 <br>\n",
     "\n",
+    "All the variables are log-transformed. <br>\n",
     "These vectors can be combined into more compact form, by gathering all explanatory variables into matrix $X$, where the first column is a vector of ones, which correspond to intercept $w_{0}$ and all coefficients are also grouped into single vector $\\mathbf{w}$. <br>\n",
     "The objetive is to minimise averaged square loss function: \n",
     "$$L(\\mathbf{w})=\\frac{1}{N} (\\mathbf{f} - \\mathbf{X}\\mathbf{w})^T(\\mathbf{f} - \\mathbf{X}\\mathbf{w}) $$, \n",
     "where $N$ is the number of observations.\n",
     "A gradient descent method will be used to estimate coefficients $\\mathbf{w}$. This is an iterative method, which uses gradient of a loss function to find optimal coefficients, which will minimise it:\n",
     "$$\\mathbf{w^{(k+1)}}=\\mathbf{w}^{(k)}-\\alpha*\\frac{\\partial L(\\mathbf{w}^{(k)})}{\\partial \\mathbf{w}^{(k)}} $$,\n",
-    "where $\\alpha$ is a learning rate to be specified, $\\mathbf{w}$ is set arbitrary intially and partial derivative is computed by:\n",
+    "where $\\alpha$ is a learning rate to be specified, $\\mathbf{w}$ is set arbitrary intially and partial derivatives are computed by:\n",
     "$$ \\frac{\\partial L(\\mathbf{w})}{\\partial \\mathbf{w}} = -\\frac{2}{N} \\left(\\mathbf{X}^T\\mathbf{f} - \\mathbf{X}^T \\mathbf{X} \\mathbf{w}\\right) $$"
    ]
   },
@@ -810,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 944,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 945,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 946,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 947,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 948,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 949,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 950,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 951,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 952,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 953,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 954,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 955,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,18 +1018,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 956,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The final loss for model for conventional type is 0.09511\n",
-      "The final loss for model for organic type is 0.29757\n",
+      "The final loss for model for conventional type is 0.09479\n",
+      "The final loss for model for organic type is 0.29452\n",
       " \n",
-      "The coefficients for model for conventional type are [ 0.95522205 -0.12118395  0.01192351 -0.01958196  0.08924506]\n",
-      "The coefficients for model for organic type are [ 1.76930541 -0.30718445  0.12157226  0.02599901  0.06479075]\n"
+      "The coefficients for model for conventional type are [ 0.95506621 -0.1204934   0.00961984 -0.01821778  0.08959744]\n",
+      "The coefficients for model for organic type are [ 1.76254334 -0.30231229  0.12189943  0.02149604  0.06408709]\n"
      ]
     }
    ],
@@ -1032,7 +1045,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first coefficient corresponds to the intercept. It means that when all the rest variables are set to zero, the average prices for avocado of conventional and organic types are 0.96 and 1.77 respectively. This confirms previous observation about organic avocados being more expensive than conventional. Then, the order of variables is the following: Total volume, 4046, 4225 and 4770. In both cases the most influential variable is Total volume: after intercept it has the largest coefficient in magnitude (-0.12 and -0.31). This coefficient means that for every one unit increase in Total volume, the corresponding price of avocado decreases by 0.12 and 0.31 monetary units for conventional and organic types respectively. Interesting observation here is that, when variables are considered together, some of them change trend from negative (as was shown in scatter plots earlier) to positive (positive coefficients). "
+    "The first coefficient corresponds to the intercept. It means that when all the rest variables are set to zero, the average prices for avocado of conventional and organic types are 0.96 and 1.76 respectively. This confirms previous observation about organic avocados being more expensive than conventional. Then, the order of variables is the following: Total volume, 4046, 4225 and 4770. In both cases the most influential variable is Total volume: after intercept it has the largest coefficient in magnitude (-0.12 and -0.30). This coefficient means that for every one unit increase in Total volume, the corresponding price of avocado decreases by 0.12 and 0.30 monetary units for conventional and organic types respectively. Interesting observation here is that, when variables are considered together, some of them change trend from negative (as was shown in scatter plots earlier) to positive (positive coefficients). "
    ]
   },
   {
@@ -1051,15 +1064,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 957,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The loss between actual outcome and predicted one for the conventional type on a test set: 0.09656\n",
-      "The loss between actual outcome and predicted one for the organic type on a test set: 0.29838\n"
+      "The loss between actual outcome and predicted one for the conventional type on a test set: 0.09612\n",
+      "The loss between actual outcome and predicted one for the organic type on a test set: 0.29832\n"
      ]
     }
    ],
@@ -1074,15 +1087,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, the model performs well on the test set, the loss values are very close to the ones obtained during training. "
+    "So, the model performs well on the test set, the loss values are very close to the ones obtained during training, which means that model generalizes well, at least within this data set. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
