--- a/Task 1 - Linear regression.ipynb
+++ b/Task 1 - Linear regression.ipynb
@@ -299,6 +299,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "Let's now explore if there are any patterns in numerical variables over time."
    ]
   },
@@ -1025,11 +1027,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The final loss for model for conventional type is 0.09479\n",
-      "The final loss for model for organic type is 0.29452\n",
+      "The final loss for model for conventional type is 0.09452\n",
+      "The final loss for model for organic type is 0.29392\n",
       " \n",
-      "The coefficients for model for conventional type are [ 0.95506621 -0.1204934   0.00961984 -0.01821778  0.08959744]\n",
-      "The coefficients for model for organic type are [ 1.76254334 -0.30231229  0.12189943  0.02149604  0.06408709]\n"
+      "The coefficients for model for conventional type are [ 0.95554196 -0.12049824  0.01007583 -0.01823013  0.08898508]\n",
+      "The coefficients for model for organic type are [ 1.76079    -0.30542228  0.12174988  0.02627076  0.06198061]\n"
      ]
     }
    ],
@@ -1045,7 +1047,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first coefficient corresponds to the intercept. It means that when all the rest variables are set to zero, the average prices for avocado of conventional and organic types are 0.96 and 1.76 respectively. This confirms previous observation about organic avocados being more expensive than conventional. Then, the order of variables is the following: Total volume, 4046, 4225 and 4770. In both cases the most influential variable is Total volume: after intercept it has the largest coefficient in magnitude (-0.12 and -0.30). This coefficient means that for every one unit increase in Total volume, the corresponding price of avocado decreases by 0.12 and 0.30 monetary units for conventional and organic types respectively. Interesting observation here is that, when variables are considered together, some of them change trend from negative (as was shown in scatter plots earlier) to positive (positive coefficients). "
+    "The first coefficient corresponds to the intercept. It means that when all the rest variables are set to zero, the average prices for avocado of conventional and organic types are 0.96 and 1.76 respectively. This confirms previous observation about organic avocados being more expensive than conventional. Then, the order of variables is the following: Total volume, 4046, 4225 and 4770. In both cases the most influential variable is Total volume: after intercept it has the largest coefficient in magnitude (-0.12 and -0.31). This coefficient means that for every one unit increase in Total volume, the corresponding price of avocado decreases by 0.12 and 0.31 monetary units for conventional and organic types respectively. Interesting observation here is that, when variables are considered together, some of them change trend from negative (as was shown in scatter plots earlier) to positive (positive coefficients). "
    ]
   },
   {
@@ -1071,8 +1073,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The loss between actual outcome and predicted one for the conventional type on a test set: 0.09612\n",
-      "The loss between actual outcome and predicted one for the organic type on a test set: 0.29832\n"
+      "The loss between actual outcome and predicted one for the conventional type on a test set: 0.09495\n",
+      "The loss between actual outcome and predicted one for the organic type on a test set: 0.30132\n"
      ]
     }
    ],
@@ -1088,6 +1090,23 @@
    "metadata": {},
    "source": [
     "So, the model performs well on the test set, the loss values are very close to the ones obtained during training, which means that model generalizes well, at least within this data set. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to make predictions, need to substitute obtained coefficients into model shown in the beginning of the section, remembering to take exponential, since data was log-transformed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_conv=np.exp(np.dot(X_test_conv,w_new_conv))# predictions for price of avocados of conventional type\n",
+    "y_pred_org=np.exp(np.dot(X_test_org,w_new_org))# predicitons for price of avocados of organic type"
    ]
   }
  ],
