--- a/Task 1 - Linear regression.ipynb
+++ b/Task 1 - Linear regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4     6183.95     5986.26      197.69          0.0  conventional  2015  Albany  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "(18249, 13)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "Text(0.5, 1.0, 'Date vs Total volume')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "Text(0.5, 1.0, 'Date vs 4046')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "Text(0.5, 1.0, 'Date vs 4225')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "Text(0.5, 1.0, 'Date vs 4770')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "Text(0.5, 1.0, 'Date vs Total Bags')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "Text(0, 0.5, 'Total Bags')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "       [0.95317924, 1.        ]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "Text(0.5, 1.0, 'Average Price')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "Text(0.5, 0.98, 'log(Average Price) vs')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "Text(0.5, 0.98, 'log(Average Price) vs')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "Text(0, 0.5, 'Average price')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -798,7 +798,9 @@
    "source": [
     "So, the task now is to model average avocado price based on 4 variables: Total Volume, 4046, 4225, 4770. The data is also split by type, so we end up with two models: one for conventional avocados and one for organic avocados. <br>\n",
     "The model looks like:\n",
-    "$$\\mathbf{f}=w_{0} + w_{1} \\mathbf{x_{1}} + w_{2}\\mathbf{x_{2}} + w_{3}\\mathbf{x_{3}} + w_{4}\\mathbf{x_{4}} = X \\mathbf{w}$$\n",
+    "\n",
+    "$$\\ln(\\mathbf{f})=w_{0} + w_{1} \\ln(\\mathbf{x_{1}}) + w_{2}\\ln(\\mathbf{x_{2}}) + w_{3}\\ln(\\mathbf{x_{3}}) + w_{4}\\ln(\\mathbf{x_{4}}) = X \\mathbf{w} \\qquad  (1)$$\n",
+    "\n",
     "Where $\\mathbf{f}$ is a target vector of avocado prices, $x_{i}$ are explanatory variables and $w_{i}$ are unknown coefficients to be found. The variables are: <br>\n",
     "* $\\mathbf{x_{1}}$ - Total volume <br>\n",
     "* $\\mathbf{x_{2}}$ - 4046 <br>\n",
@@ -808,12 +810,12 @@
     "All the variables are log-transformed. <br>\n",
     "These vectors can be combined into more compact form, by gathering all explanatory variables into matrix $X$, where the first column is a vector of ones, which correspond to intercept $w_{0}$ and all coefficients are also grouped into single vector $\\mathbf{w}$. <br>\n",
     "The objetive is to minimise averaged square loss function: \n",
-    "$$L(\\mathbf{w})=\\frac{1}{N} (\\mathbf{f} - \\mathbf{X}\\mathbf{w})^T(\\mathbf{f} - \\mathbf{X}\\mathbf{w}) $$, \n",
+    "$$L(\\mathbf{w})=\\frac{1}{N} (\\ln(\\mathbf{f}) - \\mathbf{X}\\mathbf{w})^T(\\ln(\\mathbf{f}) - \\mathbf{X}\\mathbf{w}) $$, \n",
     "where $N$ is the number of observations.\n",
     "A gradient descent method will be used to estimate coefficients $\\mathbf{w}$. This is an iterative method, which uses gradient of a loss function to find optimal coefficients, which will minimise it:\n",
     "$$\\mathbf{w^{(k+1)}}=\\mathbf{w}^{(k)}-\\alpha*\\frac{\\partial L(\\mathbf{w}^{(k)})}{\\partial \\mathbf{w}^{(k)}} $$,\n",
     "where $\\alpha$ is a learning rate to be specified, $\\mathbf{w}$ is set arbitrary intially and partial derivatives are computed by:\n",
-    "$$ \\frac{\\partial L(\\mathbf{w})}{\\partial \\mathbf{w}} = -\\frac{2}{N} \\left(\\mathbf{X}^T\\mathbf{f} - \\mathbf{X}^T \\mathbf{X} \\mathbf{w}\\right) $$"
+    "$$ \\frac{\\partial L(\\mathbf{w})}{\\partial \\mathbf{w}} = -\\frac{2}{N} \\left(\\mathbf{X}^T\\ln(\\mathbf{f}) - \\mathbf{X}^T \\mathbf{X} \\mathbf{w}\\right) $$"
    ]
   },
   {
@@ -825,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,18 +1022,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The final loss for model for conventional type is 0.09452\n",
-      "The final loss for model for organic type is 0.29392\n",
+      "The final loss for model for conventional type is 0.09393\n",
+      "The final loss for model for organic type is 0.29412\n",
       " \n",
-      "The coefficients for model for conventional type are [ 0.95554196 -0.12049824  0.01007583 -0.01823013  0.08898508]\n",
-      "The coefficients for model for organic type are [ 1.76079    -0.30542228  0.12174988  0.02627076  0.06198061]\n"
+      "The coefficients for model for conventional type are [ 0.95678302 -0.12055064  0.01065336 -0.0178857   0.08774966]\n",
+      "The coefficients for model for organic type are [ 1.76422492 -0.30543092  0.12401363  0.02419453  0.06176547]\n"
      ]
     }
    ],
@@ -1066,15 +1068,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The loss between actual outcome and predicted one for the conventional type on a test set: 0.09495\n",
-      "The loss between actual outcome and predicted one for the organic type on a test set: 0.30132\n"
+      "The loss between actual outcome and predicted one for the conventional type on a test set: 0.09261\n",
+      "The loss between actual outcome and predicted one for the organic type on a test set: 0.29757\n"
      ]
     }
    ],
@@ -1096,18 +1098,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to make predictions, need to substitute obtained coefficients into model shown in the beginning of the section, remembering to take exponential, since data was log-transformed."
+    "In order to make predictions, need to substitute obtained coefficients into the equation (1) shown in the beginning of the section, remembering to take exponential, since data was log-transformed:\n",
+    "$$ \\mathbf{f}=\\exp(X\\mathbf{w})$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_pred_conv=np.exp(np.dot(X_test_conv,w_new_conv))# predictions for price of avocados of conventional type\n",
     "y_pred_org=np.exp(np.dot(X_test_org,w_new_org))# predicitons for price of avocados of organic type"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Several more things can be added to this analysis:\n",
+    "* Compute p-values for coefficients to see if all of them are significant\n",
+    "* Try differnet set of explanatory variables\n",
+    "* Compute adj-$R^{2}$ to see how much variability in price is explained by the model\n",
+    "* Compute and plot residuals to check if model assumptions are valid (residuals should have mean zero and be randomly scattered around the mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
