--- a/Task 1 - Linear regression.ipynb
+++ b/Task 1 - Linear regression.ipynb
@@ -1120,7 +1120,7 @@
     "* Compute p-values for coefficients to see if all of them are significant\n",
     "* Try differnet set of explanatory variables\n",
     "* Compute adj-$R^{2}$ to see how much variability in price is explained by the model\n",
-    "* Compute and plot residuals to check if model assumptions are valid (residuals should have mean zero and be randomly scattered around the mean"
+    "* Compute and plot residuals to check if model assumptions are valid (residuals should have mean zero and be randomly and equally scattered around the mean"
    ]
   },
   {
